Finalized draft of full workflow

--- a/scripts/test_scripts/Hyperspectral_API_code.ipynb
+++ b/scripts/test_scripts/Hyperspectral_API_code.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-29T00:58:54.037584Z",
-     "start_time": "2020-06-29T00:58:48.968304Z"
+     "end_time": "2020-07-03T05:52:18.574207Z",
+     "start_time": "2020-07-03T05:52:16.232032Z"
     }
    },
    "outputs": [],
@@ -162,6 +162,39 @@
     "# url = \"https://neon-aop-products.s3.data.neonscience.org:443/2019/FullSite/D15/2019_ONAQ_2/L3/Spectrometer/Reflectance/NEON_D15_ONAQ_DP3_379000_4452000_reflectance.h5?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20200610T051611Z&X-Amz-SignedHeaders=host&X-Amz-Expires=3600&X-Amz-Credential=pub-internal-read%2F20200610%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Signature=f743cc362d0cbe381ce40e8a950e501a090835261542024ebf471c39a9fea1d8\"\n",
     "# urllib.request.urlretrieve(url, \"NEON_D15_ONAQ_DP3_379000_4452000_reflectance.h5\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-03T05:55:48.639156Z",
+     "start_time": "2020-07-03T05:55:48.159099Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://neon-prod-pub-1.s3.data.neonscience.org/NEON.DOM.SITE.DP1.10098.001/PROV/ONAQ/20170901T000000--20171001T000000/basic/NEON.D15.ONAQ.DP1.10098.001.variables.20200414T134430Z.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20200703T055510Z&X-Amz-SignedHeaders=host&X-Amz-Expires=3600&X-Amz-Credential=pub-internal-read%2F20200703%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Signature=a9689c20a6ba74e44c236565df0912e6224c4f1e41da66afa438680cd99d63b5\n",
+      "https://neon-prod-pub-1.s3.data.neonscience.org/NEON.DOM.SITE.DP1.10098.001/PROV/ONAQ/20170901T000000--20171001T000000/basic/NEON.D15.ONAQ.DP1.10098.001.vst_perplotperyear.2017-09.basic.20200414T134430Z.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20200703T055510Z&X-Amz-SignedHeaders=host&X-Amz-Expires=3600&X-Amz-Credential=pub-internal-read%2F20200703%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Signature=bf07b96a0e83abd35e538b5cd0d64bc45173cd63a84f1a44d924d4cbd8123611\n",
+      "https://neon-prod-pub-1.s3.data.neonscience.org/NEON.DOM.SITE.DP1.10098.001/PROV/ONAQ/20170901T000000--20171001T000000/basic/NEON.D15.ONAQ.DP1.10098.001.vst_mappingandtagging.basic.20200414T134430Z.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20200703T055510Z&X-Amz-SignedHeaders=host&X-Amz-Expires=3600&X-Amz-Credential=pub-internal-read%2F20200703%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Signature=581227d637fb63bde6092f1f0ff45d485db579a18b79ef499dbcde43153449ef\n",
+      "https://neon-prod-pub-1.s3.data.neonscience.org/NEON.DOM.SITE.DP1.10098.001/PROV/ONAQ/20170901T000000--20171001T000000/basic/NEON.D15.ONAQ.DP0.10098.001.validation.20200414T134430Z.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20200703T055510Z&X-Amz-SignedHeaders=host&X-Amz-Expires=3600&X-Amz-Credential=pub-internal-read%2F20200703%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Signature=195f3d2c2e3120af2faec3bec37699bc535a6b2f66c3f9da60ce374269e1a172\n",
+      "https://neon-prod-pub-1.s3.data.neonscience.org/NEON.DOM.SITE.DP1.10098.001/PROV/ONAQ/20170901T000000--20171001T000000/basic/NEON.D15.ONAQ.DP1.10098.001.vst_apparentindividual.2017-09.basic.20200414T134430Z.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20200703T055510Z&X-Amz-SignedHeaders=host&X-Amz-Expires=3600&X-Amz-Credential=pub-internal-read%2F20200703%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Signature=1ad5530c41235be3066afe7c1711dda7cf3166690bf0be5b32c8aa9e232b4bcd\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_product_url='https://data.neonscience.org/api/v0/data/DP1.10098.001/ONAQ/2017-09'\n",
+    "call_response = requests.get(data_product_url)\n",
+    "for i in call_response.json()['data']['files']:\n",
+    "    data_file_url=i['url']\n",
+    "#     file_format_tif=data_file_url.find('tif')\n",
+    "    file_format_csv=data_file_url.find('.csv')\n",
+    "    if not file_format_csv == -1:\n",
+    "        print(data_file_url)"
    ]
   },
   {
