--- a/scripts/test_scripts/Hyperspectral_Flightline_Test.ipynb
+++ b/scripts/test_scripts/Hyperspectral_Flightline_Test.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-22T20:03:13.837966Z",
-     "start_time": "2020-06-22T20:03:09.036802Z"
+     "end_time": "2020-07-03T05:49:37.046906Z",
+     "start_time": "2020-07-03T05:49:33.053600Z"
     }
    },
    "outputs": [],
@@ -65,11 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-22T20:05:01.596476Z",
-     "start_time": "2020-06-22T20:05:01.256452Z"
+     "end_time": "2020-07-03T05:49:37.351929Z",
+     "start_time": "2020-07-03T05:49:37.048906Z"
     }
    },
    "outputs": [
@@ -608,11 +608,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-22T20:05:04.749726Z",
-     "start_time": "2020-06-22T20:05:04.425699Z"
+     "end_time": "2020-07-03T05:49:37.528943Z",
+     "start_time": "2020-07-03T05:49:37.355930Z"
     }
    },
    "outputs": [
@@ -865,23 +865,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-22T20:08:54.338501Z",
-     "start_time": "2020-06-22T20:05:07.430214Z"
+     "end_time": "2020-07-03T05:49:40.343240Z",
+     "start_time": "2020-07-03T05:49:40.335237Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20190505_16433\n",
-      "20190505_17180\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ONAQ_hyp_refl=glob(os.path.join('data','earthpy-downloads','*ONAQ_DP1*'))\n",
     "\n",
@@ -938,11 +929,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-22T20:03:44.149234Z",
-     "start_time": "2020-06-22T20:03:25.729620Z"
+     "end_time": "2020-07-03T05:50:01.018560Z",
+     "start_time": "2020-07-03T05:49:52.697898Z"
     },
     "scrolled": false
    },
@@ -957,11 +948,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-22T20:03:44.197237Z",
-     "start_time": "2020-06-22T20:03:44.154235Z"
+     "end_time": "2020-07-03T05:50:01.042560Z",
+     "start_time": "2020-07-03T05:50:01.021562Z"
     }
    },
    "outputs": [
@@ -982,7 +973,7 @@
        "Name: longitude, Length: 90, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,14 +984,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-22T20:08:57.276544Z",
-     "start_time": "2020-06-22T20:08:54.473512Z"
+     "end_time": "2020-07-03T05:50:01.320582Z",
+     "start_time": "2020-07-03T05:50:01.046563Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'20190505_16433'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-5d50e723ba4a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mONAQ_bnd\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mall_NEON_sites\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mall_NEON_sites\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'plotID'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ONAQ'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mONAQ_bnd\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mONAQ_bnd\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'plotID'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'plotSize'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'geometry'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mONAQ_bnd_rpj\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mONAQ_bnd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_crs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepsg\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mONAQ_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'20190505_16433'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'metadata'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'epsg'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mONAQ_bnd_rpj\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'geometry'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mONAQ_bnd_rpj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgeometry\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m40\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mONAQ_bnd_rpj\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'plotID'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: '20190505_16433'"
+     ]
+    }
+   ],
    "source": [
     "# Merge taxonomic data to the plotID coordinates\n",
     "ONAQ_bnd=all_NEON_sites[all_NEON_sites['plotID'].str.match('ONAQ')]\n",
