--- a/scripts/sagebrush_hyperspectral_modeling_NEON_ONAQ.ipynb
+++ b/scripts/sagebrush_hyperspectral_modeling_NEON_ONAQ.ipynb
@@ -16,9 +16,9 @@
     "# Sage Advice: Can Remote Sensing Inform Sagebrush Conservation?\n",
     "## Outline of Project Trajectory\n",
     "This project started with two official goals:\n",
-    "* Using LIDAR data to reconstruct sagebrush ecosystem vegetation structure (height/coverage of shrubs vs. grasses)\n",
-    "* Using spectral data to reconstruct sagebrush ecosystem vegetation composition (taxonomic diversity/distribution)\n",
-    "    * In considering these data products, we wanted to compare fine and medium resolution data if possible.<br>\n",
+    "* Use LIDAR data to reconstruct sagebrush ecosystem vegetation structure (height/coverage of shrubs vs. grasses)\n",
+    "* Use spectral data to reconstruct sagebrush ecosystem vegetation composition (taxonomic diversity/distribution)\n",
+    "    * Compare fine and medium spectral/spatial resolution data if possible.<br>\n",
     "    \n",
     "This project ended with reproducible workflows performing unsupervised endmember extraction and abundance maps for LANDSAT8  and the National Ecological Observatory Network's (NEON) Hyperspectral data, thereby resolving the second goal, but there were many lessons learned in the process. Consequently, this project became an unofficial review of the freely available LIDAR and spectral data over sagebrush ecosystems and was divided into three parts:\n",
     "\n",
@@ -91,13 +91,13 @@
     "\n",
     "Hyperspectral data from both AVIRIS and NEON were tested for this analysis. There are of course pros and cons to each data product. AVIRIS has better temporal coverage (2006-2019), but spatial coverage is generally focused to California, Nevada, and the Gulf of Mexico. NEON has excellent spatial coverage with data available for all of their 81 sites in the United States, but temporal coverage is poor (2017-2019, typically on a biannual basis). Both products are similar spectral resolutions - covering wavelengths from roughly 250-2500, but the NEON data is slightly finer spectral resolution as those wavelengths are divided into 426 bands as opposed to AVIRIS 224. NEON is also finer spatial resolution at 1 meter squared while AVIRIS is 20 meters squared. \n",
     "\n",
-    "The main differentiator between the two data products was the level of documentation. AVIRIS data is geared towards processing in ENVI, and though there are free Python tools, such as MIT open source <a href=\"http://www.spectralpython.net/\" target=\"blank\" > Python Spectral (SPy) </a> module, documentation for working with AVIRIS in Python is relatively sparse. NEON on the other hand, offers a variety of tutorials on importing, processing, cleaning, subsetting, etc. their hyperspectral data. Consequently, the workflow and analysis were completed with NEON data. \n",
+    "The main differentiator between the two data products was the level of documentation. AVIRIS data is geared towards processing in ENVI, and though there are free Python tools, such as MIT open source <a href=\"http://www.spectralpython.net/\" target=\"blank\" > Python Spectral (SPy)</a> module, documentation for working with AVIRIS in Python is relatively sparse. NEON on the other hand, offers a variety of tutorials on importing, processing, cleaning, subsetting, etc. their hyperspectral data. Consequently, the workflow and analysis were completed with NEON data. \n",
     "\n",
     "## NEON: Data Products Available\n",
     "\n",
     "NEON's hyperspectral data is available in hierarchical data format (.h5) files of both variable length flightlines and mosaicked 1 kilometer squared tiles of those flightlines. These are roughly 1.4GB and 0.6GB per file, respectively. Since these files are large, they are time intensive to download and analyze, and the RAM required to work with the flightlines exceeded what my computer could handle without significantly subsetting by bands or cropping the extent. Consequently, this workflow uses only the 0.6GB tiled data which is available from NEON's <a href =\"https://data.neonscience.org/data-products/DP3.30006.001\" target= \"blank\" > Data Portal</a>.\n",
     "\n",
-    "Additional workflows are in progress to process the larger flightlines. Analysis of the flightlines is preferred since they can be more efficiently overlapped with *insitu* plots. This is both because they cover a larger area and because they come with ancillary data files, such as RGB rasters and kmls of their flight paths. This allows for quick overlap between the much smaller ancillary files (125MB instead of 1.4GB) and plot polygons to determine which flightlines cover *insitu* sites. However, as mentioned previously, the raw flightline hyperspectral data are highly intensive and multiple approaches need to be incorporated to subset and clean the flightlines for analysis.  <br>\n"
+    "Additional workflows are in progress to process the larger flightlines. Analysis of the flightlines is preferred since they can be more efficiently overlapped with *insitu* plots. This is because they cover a larger area and come with ancillary data files, such as RGB rasters and kmls of their flight paths. This allows for quick overlap between the much smaller ancillary files (125MB instead of 1.4GB) and plot polygons to determine which flightlines cover *insitu* sites. However, as mentioned previously, the raw flightline hyperspectral data are computationally intensive, therefore multiple approaches must be incorporated to subset and clean the flightlines for analysis.  <br>\n"
    ]
   },
   {
@@ -193,11 +193,10 @@
     "\n",
     "\"The exact measurements collected per individual depend on growth form, and these measurements are focused on enabling... *validation of multiple NEON airborne remote-sensing data products*. In general, *comparatively large individuals that are visible to remote-sensing instruments are mapped* and *other smaller individuals are tagged and measured but not mapped*\" [emphasis mine].\n",
     "\n",
-    "The Woody Plant Vegetation Structure data for this site, collected September 2019, just four months after the hyperspectral data, included multiple identifications Greater Sagebrush, *Artemsia tridentata*. Consequently, I built a workflow which imported the tabular species data, buffered the plot points of the plot centroids, clipped the flightlines to the plot extents, and plotted the spectral signature from several pixels in this plot area. \n",
+    "The Woody Plant Vegetation Structure data for this site, collected September 2019, just four months after the hyperspectral data, included multiple identifications of Greater Sagebrush, *Artemsia tridentata*. Consequently, I built a workflow which imported the tabular species data, buffered the plot points of the plot centroids, clipped the flightlines to the plot extents, and plotted the spectral signature from several pixels in this plot area. \n",
     "\n",
-    "Unfortunately, I realized there was no way to map pixels to the documented plants. The only geospatial data available is related to the Plot ID's, not the Individual ID's of the plants. Best case scenario using this approach, we might stumble upon pixels with the spectral signatures of sage by focusing on plots with abundant sagebrush, but this would introduce a significant degree of uncertainty since we cannot map the pixels to the known sage themselves. \n",
+    "Unfortunately, I realized pixels could not be mapped to documented plants. The only geospatial data available is related to the Plot ID's, not the Individual ID's of the plants. While the data product abstract provides no height threshold, presumably sagebrush are too small to be visible to remote sensing instruments and consequently not mapped on site. The best case scenario using this approach is stumbling upon pixels with the spectral signatures of sage by extracting spectra from plots with abundant sagebrush. However, this would introduce a significant degree of uncertainty since we cannot map the pixels to the known sage themselves. \n",
     "\n",
-    "No height threshold is given in the data product abstract, but presumably sagebrush are not large enough to be visible to remote sensing instruments and therefore not considered useful for remote sensing data validation.\n",
     "\n",
     "## Validation Against Isolated Spectral Signatures\n",
     "\n",
@@ -741,18 +740,13 @@
     "\n",
     "## Next Steps\n",
     "\n",
-    "The results from this project show promise in applying endmember extraction algorithms to sagebrush/steppe environments and identifying two species of ecological significance: the foundational sagebrush and invasive cheatgrass. However, additional validation should be pursued to improve the confidence of the identifications. Consequently, the workflows extracting spectral signatures are still in progress so that NEON's remote sensing data can be validated when focal vegetation are individually located. \n",
+    "The results from this project show promise in applying endmember extraction algorithms to identify two species of ecological significance: the foundational sagebrush and invasive cheatgrass. However, additional work is needed to delineate between plant species and improve data validation options. \n",
     "\n",
-    "Further analyses are also needed to quantify comparisons between LANDSAT8 and NEON hyperspectral data which will require upscaling or downscaling one of the data sources. Once this workflow is complete, spectral and spatial analyses could be expanded to other products (such as AVIRIS or ASTER), or replicated in other sites. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# References\n",
+    "I delineated between spectra correlating with sagebrush and cheatgrass here, but since these vegetation types are significantly different ecologically, phenologically, and taxonomically, we cannot rule out the possibility that we are confounding vegetation types within these shrub/grass categories. It is possible that mutliple shrubs are being grouped into the sagebrush endmember spectra, therefore these abundance maps may be overestimating the presences of sagebrush. Likewise, the cheatgrass spectra may include more than one grass-type. To see how vegetation spectra are being grouped, additional work needs to be done comparing the spectra of sympatric grass and shrub species within like-groups at this site. Unfortunately, this is limited by the number of spectra available in spectral libraries for plant species in sagebrush ecosystems. We were unable to find signatures for native bunch grasses or associated shrub species to compare Pearson's Coefficients of spectral signatures within similar vegetation groups.\n",
     "\n",
-    "Fairweather, S., Potter, C., Crabtree, R., and Li, S. 2012. “A comparison of multispectral ASTER and hyperspectral AVIRIS multiple endmember spectral mixture analysis for sagebrush and herbaceous cover in Yellowstone.” Photogrammetric Engineering & Remote Sensingv Vol. 78(No. 1): pp. 23–33. "
+    "This brings us back the underlying issues with data validation. Clearly, there are several applicable, open source remote sensing data options available. But, in some respects, these data are putting the cart before the horse since data validation methods are currently biased against arid/semi-arid environments. However, these data may be confirmed through other datasets not publicly available. Consequently, I'm still developing the workflows to 1) subset flightlines to NEON's plots, in case methods to map the sage in these plots arise and 2) extract spectral signatures of isolated pixels which could be validated against *insitu* data with geolocated sagebrush or cheatgrass.\n",
+    "\n",
+    "Further analyses are also needed to quantify differences in the abundance maps between LANDSAT8 and NEON hyperspectral data which will require upscaling or downscaling one of the data sources. Once this workflow is complete, spectral and spatial analyses could be expanded to other products (such as AVIRIS or ASTER), or replicated in other sites. While any spectral/spatial resolution would suffer from the same issues with data validation, we can still learn generally how these different products are able to classify sagebrush ecosystems."
    ]
   }
  ],
